fixed status bar spacing issues

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -122,22 +122,19 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
-
     background-color: black;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
-    
     font-family: Verdana, sans-serif;
     font-size: calc(0.5rem + 3vw);
     color: white;
-    
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-#score-box, #cps-box {
-    margin: 0 1px;
+#score-box, #cps-box, #time-label, #reset-button {
+    margin: 0 4px;
 }
 
 #settings-icon {
